<resources>
    <string name="app_name">Android Project</string>
    <string name="action_add">Add Contact</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="title_main">All Contacts</string>
    <string name="label_name">Name:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_email">Email:</string>
    <string name="label_address">Street Address:</string>
    <string name="label_city">City:</string>
    <string name="label_province">Province:</string>
    <string name="label_code">Postal Code:</string>
    <string name="add_name" />
    <string name="add_phone" />
    <string name="add_email" />
    <string name="add_address" />
    <string name="add_city" />
    <string name="add_province" />
    <string name="add_code" />
    <string name="list_name" />
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Are you sure you want to delete this contact?</string>
    <string name="confirmButton">YES</string>
    <string name="cancelButton">CANCEL</string>
    <string name="yes">yes</string>
    <string name="dialog_message">Are you sure you want to delete?</string>
    <string name="dialog_title">Delete</string>

</resources>
